fix nav bar alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,10 +7,11 @@
 body {
   min-height: 100vh;
   background-color: #eeeeee;
-  min-width: 100%;
 }
 
-
+#page-wrapper {
+  min-width: 100%;
+}
 
 #header {
   position: fixed;
@@ -22,27 +23,40 @@ body {
   font-family: "ABeeZee", sans-serif;
 }
 
-#nav-bar {
-  width: 25%;
-  height: auto;
-  position: fixed;
-  top: 2.5%;
-  right: 2.5%;
+#nav-div{
+position: fixed;
+top: 7.5%;
+right:7.5%;
+
+}
+
+#nav-bar { 
 }
 
 .nav-link-list {
+  display: flex;
+  flex-direction: row;
   list-style-type: none;
   margin: 5%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+
+  
 }
 
 .nav-link {
   font-weight: bold;
   color: black;
-  float: left;
   display: block;
   text-align: center;
   padding: 16px;
   text-decoration: none;
+
+  font-size: 21px;
+
+  
+  
 }
 
 #header-img {
@@ -105,9 +119,9 @@ main {
   grid-template-areas:
     "icon1 header1"
     "icon2 header2"
-    "icon 3 header3";
+    "icon3 header3";
 
-  grid-row-gap: 10%;
+    grid-row-gap: 5%;
 }
 
 #video-div {
@@ -215,10 +229,15 @@ footer {
     height: auto;
   }
 
-  #nav-bar {
+  #nav-div{
     width: 100%;
     height: auto;
     position: relative;
+    
+    }
+
+  #nav-bar {
+   
   }
 
   .nav-link-list {
@@ -362,7 +381,8 @@ footer {
     height: auto;
   }
 
-  #nav-bar {
+  
+  #nav-div {
     width: 100%;
     height: auto;
     position: relative;
@@ -499,7 +519,7 @@ footer {
     font-family: "ABeeZee", sans-serif;
   }
 
-  #nav-bar {
+ /* #nav-bar {
     width: 25%;
     height: auto;
     position: fixed;
@@ -521,7 +541,7 @@ footer {
     padding: 16px;
     text-decoration: none;
     font-size: 25px;
-  }
+  } */
 
   #header-img {
     height: auto;
@@ -581,7 +601,7 @@ footer {
 
     display: grid;
     grid-template-columns: 10% 90%;
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-rows: 1/3fr 1/3fr 1/3fr;
     grid-template-areas:
       "icon1 header1"
       "icon2 header2"
